# zeitgeist__zeitgeist-sharp

./: .bzrignore  LICENSE  MAINTAINERS  Makefile.am  NEWS  README  Zeitgeist.ZeitgeistSharp.Cli.sln  Zeitgeist.sln  autogen.sh  configure.ac
Zeitgeist/: AssemblyInfo.cs  AssemblyInfo.cs.in  BlacklistClient.cs  DataSourceClient.cs  Delegates.cs  LogClient.cs  Makefile.am  Makefile.in  Zeitgeist.csproj  ZeitgeistClient.cs  ZsUtils.cs  zeitgeist-sharp.pc  zeitgeist-sharp.pc.in  zeitgeist-sharp.snk  zeitgeist.pc.in
Zeitgeist.Cli/: Main.cs  Makefile.am  Zeitgeist.Cli.csproj  zeitgeist.cli.in
Zeitgeist.Testsuite/: Test.cs  Zeitgeist.Testsuite.csproj
Zeitgeist.Testsuite/Blacklist/: TestInsertEventsWithBlacklist.cs  TestMonitor.cs
Zeitgeist.Testsuite/Datamodel/: TestInterpretation.cs  TestManifestation.cs
Zeitgeist.Testsuite/Log/: TestDeleteEvents.cs  TestFindEventIds.cs  TestFindEvents.cs  TestGetEvents.cs  TestInsertAndDeleteEvents.cs  TestInsertEvents.cs  TestProperties.cs
Zeitgeist.Testsuite/Monitor/: TestMonitor.cs
Zeitgeist.ZeitgeistSharp/: AssemblyInfo.cs  Delegates.cs  Zeitgeist.ZeitgeistSharp.csproj
Zeitgeist.ZeitgeistSharp.Cli/: AssemblyInfo.cs  Main.cs  Zeitgeist.ZeitgeistSharp.Cli.csproj  Zeitgeist.ZeitgeistSharp.Cli.pidb
Zeitgeist.ZeitgeistSharp/Datamodel/: DataSource.cs  Event.cs  EventMetaData.cs  ResultType.cs  StorageState.cs  Subject.cs  TimeRange.cs
Zeitgeist/Client/: IBlacklist.cs  IDBus.cs  IDataSource.cs  ILog.cs
Zeitgeist/DBusInterface/: DataSourceRegistry.cs
Zeitgeist/Datamodel/: DataSource.cs  Delegates.cs  Event.cs  Interpretation.cs  Manifestation.cs  Monitor.cs  NameUri.cs  ResultType.cs  StorageState.cs  Subject.cs  TimeRange.cs  Version.cs
